# mycraft

./: .gitignore  CMakeLists.txt  README.md  main.cpp  model.cpp  model.hpp  object.hpp
include/: Canvas.hpp  ShaderManager.hpp  model.hpp  object.hpp  util.hpp
include/block/: BlockManager.hpp  BlockObject.hpp  BlockStruct.hpp  Material.hpp  Model.hpp
include/vision/: Canvas.hpp  GameController.hpp  InputStruct.hpp
resources/: texBase.xcf
src/: ShaderManager.cpp  main.cpp  util.cpp
src/block/: BlockManager.cpp
src/vision/: Canvas.cpp  GameController.cpp
